Fix spacing for three-way switch

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@
   align-items: center;
   background-color: red;
   border-radius: 50px;
-  grid-column: 2 / 5;
   grid-row: 2;
   position: relative;
 
@@ -36,7 +35,7 @@
 }
 
 .tripleSwitch input[value="1"]:checked ~ .tripleSwitch-slider::before {
-  left: 0%;
+  left: 3px;
 }
 
 .tripleSwitch input[value="2"]:checked ~ .tripleSwitch-slider::before {
@@ -45,6 +44,6 @@
 }
 
 .tripleSwitch input[value="3"]:checked ~ .tripleSwitch-slider::before {
-  left: 100%;
+  left: calc(100% - 3px);
   transform: translateX(-100%);
 }
